--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 body {
-  background: #F1F2F4;
+  background: #FFF;
 }
 
 // -------- inputn checbox classic
@@ -252,3 +252,31 @@ color: #3C7EEA;
     cursor: default;
   }
 }
+
+
+// //  ---------- Star Raiting ----------
+
+.star-raiting {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 20px;
+
+  position: relative;
+  padding-right: 5px;
+  padding-left: 26px;
+  box-sizing: border-box;
+  &::before {
+    content: "";
+    position: absolute;
+    top: 57%;
+    left: 0;
+    height: 17px;
+    width: 17px;
+    transform: translateY(-50%);
+    background-image: url(/assets/images/icons/Star.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+}
+
